--- a/css/styles.css
+++ b/css/styles.css
@@ -453,3 +453,8 @@ path.alert{
 	background: linear-gradient(to bottom,  #b2e1ff 0%,#66b6fc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2e1ff', endColorstr='#66b6fc',GradientType=0 ); /* IE6-9 */
 }
+
+
+..table {
+	visibility: hidden;
+}
